# terraform_single_docker

./: .gitignore  CONTRIBUTERS.md  Dockerfile  INSTALLATION.md  LICENSE  README copy.md  README.md  SSLGUID.md  TASK.md  app.py  gunicorn_conf.py  main.tf  output.tf  setup.sh  temp.md  variables.tf
ansible_nginx/: ansible.cfg  nginx_playbook.yaml  test.yaml
ansible_nginx/files/: nginx.conf
app/: Dockerfile  index.html
docker_requirements/app/: pyproject.toml
modules/app/: main.tf
modules/container/: main.tf  output.tf  variables.tf
modules/image/: main.tf  output.tf  variables.tf
modules/nginx/: default.conf.tpl  main.tf  variables.tf
modules/nginx/ssl/: server.key
nginx/: default.conf.tpl
nginx/ssl/: server.crt
nginx_files/: nginx.conf
static/: index.html
terraform/: main.tf  output.tf  variables.tf
terraform/modules/app/: main.tf  output.tf  variables.tf
terraform/modules/nginx/: main.tf  output.tf
testing/: app_variables.tf  nginx_variables.tf
webapp/: app.py
